fixing footer version mobile

--- a/css/basics.css
+++ b/css/basics.css
@@ -1,39 +1,27 @@
 :root {
-  /* palette 1 */
-  --main-color-1: #fb8b24;
-  --main-color-2: #e36414;
-  --main-color-3: #610f42;
-  --main-color-4: #9a031e;
-  --main-color-5: #0f4c5c;
-
-  /* palette 2 white to black serie */
-  --wtb-color-l1: #f8f9fa;
-  --wtb-color-l2: #e9ecef;
-  --wtb-color-l3: #dee2e6;
-  --wtb-color-l4: #ced4da;
-  --wtb-color-l5: #adb5bd;
-  --wtb-color-l6: #6c757d;
-  --wtb-color-l7: #495057;
-  --wtb-color-l8: #343a40;
-  --wtb-color-l9: #212529;
-
   /* palette 3 */
-  --green-light-color: #606c38;
-  --green-dark-color: #283618;
-  --light-color: #fefae0;
-  --orange-light-color: #dda15e;
-  --orange-dark-color: #bc6c25;
-}
+  --color-primary-light: #606c38;
+  --color-primary-dark: #283618;
+  --color-light: #fefae0;
+  --color-dark: #212529;
+  --color-secondry-light: #dda15e;
+  --color-secondry-dark: #bc6c25;
+/* 
+  --color-primary-light: #dda15e;
+  --color-primary-dark: #bc6c25;
+  --color-light: #fefae0;
+  --color-dark: #212529;
+  --color-secondry-light: #606c38;
+  --color-secondry-dark: #283618; */
 
- /* @media (prefers-color-scheme: dark)
-{
-  :root {
-    --green-light-color: #dda15e;
-    --green-dark-color: #bc6c25;
-    --orange-light-color: #606c38;
-    --orange-dark-color: #283618;
-  }
-}  */
+  --bg-primary-light: var(--color-primary-light);
+  --bg-primary-dark: var(--color-primary-dark);
+  --bg-light: var(--color-light);
+  --bg-dark: var(var(--color-dark));
+  --bg-secondry-light: var(--color-secondry-light);
+  --bg-secondry-dark: var(--color-secondry-dark);
+  
+}
 
 * {
   padding: 0;
